# agentic_data_platform_new

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
agents/: answer_agent.py  catalog_manager.py  intent_agent.py  pipeline.py  schema_discovery_agent.py  sql_generation_agent.py  table_router_agent.py  validation_agent.py
config/: settings.py
core/: bigquery_client.py  bq_uploader.py  dataset_profiler.py
models/: catalog.py  dataset.py  intent.py  validation.py
scripts/: generate_cc_transactions.py  test_bq_client.py  test_dataset_profiler.py  test_intent_agent.py  test_schema_discovery_agent.py  test_sql_generation_agent.py  test_validation_agent.py
tests/: test_bigquery_client.py  test_dataset_profiler.py
